Fixed pyMongo insertion

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17936_hires.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA14762_hires.jpg\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "'Sol 2171 (2018-09-14), high -12C/10F, low -65C/-84F, pressure at 8.79 hPa, daylight 05:43-17:59'"
+       "'Astronomical autumn begins with the September equinox at 9:54 ET tonight https://www.wral.com/autumn-s-arrival-celebrated-differently-at-different-times-around-the-world/17864537/\\xa0…pic.twitter.com/cUArBS7WFV'"
       ]
      },
      "execution_count": 14,
